# convert2md

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
convert2md/: __init__.py  __main__.py  adapters.py  cli.py  document.py  gemini.py  render.py  settings.py  sources.py
convert2md/prompts/: __init__.py  caption.md
docs/: architecture.md  format.md
extension/: extract.js  extract.test.js  gemini.js  gemini.test.js  manifest.json  md.js  md.test.js  offscreen.html  offscreen.js  options.html  options.js  package-lock.json  package.json  popup.css  popup.html  popup.js  sw.js
extension/prompts/: transcribe.md
tests/: test_core.py
tests/fixtures/: confluence-page.html  sharepoint-page.html
